examples/test/testpolicy9852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9852
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key4: value39
      key5: value23
      key8: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value4
          key38: value13
      podSelector:
        matchLabels:
          key14: value30
          key3: value45
